apps/ingress-mc/all.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ingress-mc
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mc-router
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: mc-router-1.5.0
  name: ingress-mc-mc-router
  namespace: ingress
spec:
  externalTrafficPolicy: Local
  ports:
  - name: minecraft
    port: 25565
    protocol: TCP
    targetPort: minecraft
  selector:
    app.kubernetes.io/instance: ingress-mc
    app.kubernetes.io/name: mc-router
  type: LoadBalancer
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: ingress-mc
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mc-router
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: mc-router-1.5.0
  name: ingress-mc-mc-router
  namespace: ingress
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: ingress-mc
      app.kubernetes.io/name: mc-router
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ingress-mc
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mc-router
        app.kubernetes.io/version: 1.0.0
        helm.sh/chart: mc-router-1.5.0
    spec:
      containers:
      - env:
        - name: IN_KUBE_CLUSTER
          value: "true"
        - name: API_BINDING
          value: :8080
        - name: PORT
          value: "25565"
        - name: AUTO_SCALE_UP
          value: "true"
        - name: AUTO_SCALE_DOWN
          value: "false"
        - name: CONNECTION_RATE_LIMIT
          value: "1"
        - name: DEBUG
          value: "false"
        - name: METRICS_BACKEND
          value: discard
        - name: SIMPLIFY_SRV
          value: "false"
        - name: USE_PROXY_PROTOCOL
          value: "true"
        - name: VERSION
          value: "false"
        image: itzg/mc-router:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 20
          httpGet:
            httpHeaders:
            - name: Accept
              value: application/json
            path: /routes
            port: 8080
          initialDelaySeconds: 30
        name: mc-router
        ports:
        - containerPort: 8080
          name: api
          protocol: TCP
        - containerPort: 25565
          name: minecraft
          protocol: TCP
        readinessProbe:
          failureThreshold: 20
          httpGet:
            httpHeaders:
            - name: Accept
              value: application/json
            path: /routes
            port: 8080
          initialDelaySeconds: 30
        resources: {}
        securityContext: {}
        startupProbe:
          failureThreshold: 30
          httpGet:
            httpHeaders:
            - name: Accept
              value: application/json
            path: /routes
            port: 8080
      securityContext: {}
      serviceAccountName: ingress-mc-mc-router
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-mc-allow
spec:
  endpointSelector:
    matchLabels:
      allow-ingress-mc: "true"
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/instance: ingress-mc
        app.kubernetes.io/name: mc-router
        k8s:io.kubernetes.pod.namespace: ingress
    toPorts:
    - ports:
      - port: minecraft
        protocol: ANY
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-mc-allow-world
  namespace: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-mc
      app.kubernetes.io/name: mc-router
  ingress:
  - fromEntities:
    - world
    toPorts:
    - ports:
      - port: minecraft
